Fix janky jump in the meny when scrolling up

--- a/sass/_docs.scss
+++ b/sass/_docs.scss
@@ -25,7 +25,7 @@ header {
 
     .docs-menu-inner {
         position: sticky;
-        top: var(--navbar-height);
+        top: calc(var(--navbar-height) + 1rem);
         overflow-y: auto;
     }
 
